# L-Gen

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: groove.h  pattern.cpp  pattern.h  rhythm.cpp  rhythm.h  scale.cpp  scale.h  sequence.cpp  sequence.h
src/core/groove/: swing.h
